--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,16 @@ requires = [
 ]
 
 [project]
-name = "aa-example-plugin"
-description = "Example Plugin for Alliance Auth (GitHub Version)"
+name = "aa-reactions"
+description = "Reactions for Alliance Auth"
 readme = "README.md"
 keywords = [
     "allianceauth",
-    "example",
+    "reactions",
 ]
 license = { file = "LICENSE" }
 authors = [
-    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
+    { name = "BioBrute", email = "example@example.de" },
 ]
 requires-python = ">=3.10"
 classifiers = [
@@ -39,13 +39,13 @@ dynamic = [
 dependencies = [
     "allianceauth>=4.3.1,<5",
 ]
-urls.Changelog = "https://github.com/ppfeufer/aa-example-plugin/blob/master/CHANGELOG.md"
-urls."Issue / Bug Reports" = "https://github.com/ppfeufer/aa-example-plugin/issues"
+urls.Changelog = "https://github.com/BroodLK/aa-reactions/blob/master/CHANGELOG.md"
+urls."Issue / Bug Reports" = "https://github.com/BroodLK/aa-reactions/issues"
 
 [tool.hatch.version]
-path = "example/__init__.py"
+path = "aareactions/__init__.py"
 
 [tool.hatch.build]
 include = [
-    "/example",
+    "/aareactions",
 ]
